Update SIGAP link to production URL

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dinas PUPR Papua Barat Daya - Pekerjaan Umum dan Perumahan Rakyat</title>
+    <link rel="icon" type="image/png" href="/images/logo-papua-barat-daya.png" />
     <meta name="description" content="Website resmi Dinas Pekerjaan Umum dan Perumahan Rakyat Provinsi Papua Barat Daya. Membangun infrastruktur berkualitas untuk Papua yang maju dan sejahtera." />
     <meta name="keywords" content="PUPR, Papua Barat Daya, Infrastruktur, Perumahan Rakyat, Bina Marga, Sumber Daya Air" />
     <meta name="author" content="Dinas PUPR Papua Barat Daya" />
