--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dinas PUPR Papua Barat Daya - Pekerjaan Umum dan Perumahan Rakyat</title>
-    <link rel="icon" type="image/png" href="/images/logo-papua-barat-daya.png" />
-    <meta name="description" content="Website resmi Dinas Pekerjaan Umum dan Perumahan Rakyat Provinsi Papua Barat Daya. Membangun infrastruktur berkualitas untuk Papua yang maju dan sejahtera." />
-    <meta name="keywords" content="PUPR, Papua Barat Daya, Infrastruktur, Perumahan Rakyat, Bina Marga, Sumber Daya Air" />
-    <meta name="author" content="Dinas PUPR Papua Barat Daya" />
 
-    <meta property="og:title" content="Dinas PUPR Papua Barat Daya" />
-    <meta property="og:description" content="Membangun infrastruktur berkualitas untuk Papua Barat Daya yang maju dan sejahtera" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/images/logo-pbd.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dinas PUPR Papua Barat Daya - Pekerjaan Umum dan Perumahan Rakyat</title>
+  <link rel="icon" type="image/png" href="/images/logo-papua-barat-daya-new.png" />
+  <meta name="description"
+    content="Website resmi Dinas Pekerjaan Umum dan Perumahan Rakyat Provinsi Papua Barat Daya. Membangun infrastruktur berkualitas untuk Papua yang maju dan sejahtera." />
+  <meta name="keywords"
+    content="PUPR, Papua Barat Daya, Infrastruktur, Perumahan Rakyat, Bina Marga, Sumber Daya Air" />
+  <meta name="author" content="Dinas PUPR Papua Barat Daya" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Dinas PUPR Papua Barat Daya" />
-    <meta name="twitter:description" content="Membangun infrastruktur berkualitas untuk Papua Barat Daya yang maju dan sejahtera" />
-    <meta name="twitter:image" content="/images/logo-pbd.png" />
-  </head>
+  <meta property="og:title" content="Dinas PUPR Papua Barat Daya" />
+  <meta property="og:description"
+    content="Membangun infrastruktur berkualitas untuk Papua Barat Daya yang maju dan sejahtera" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/images/logo-pbd.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Dinas PUPR Papua Barat Daya" />
+  <meta name="twitter:description"
+    content="Membangun infrastruktur berkualitas untuk Papua Barat Daya yang maju dan sejahtera" />
+  <meta name="twitter:image" content="/images/logo-pbd.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
