--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dinas PUPR Papua Barat Daya - Pekerjaan Umum dan Perumahan Rakyat</title>
-  <link rel="icon" type="image/png" href="/images/logo-papua-barat-daya-new.png" />
+  <link rel="icon" type="image/png" href="/images/logo-papua-barat-daya-new.png?v=2" />
   <meta name="description"
     content="Website resmi Dinas Pekerjaan Umum dan Perumahan Rakyat Provinsi Papua Barat Daya. Membangun infrastruktur berkualitas untuk Papua yang maju dan sejahtera." />
   <meta name="keywords"
